Correct overflow display for TaskColumns on Windows

--- a/src/components/Dashboard/TasksColumns/TaskColumns.scss
+++ b/src/components/Dashboard/TasksColumns/TaskColumns.scss
@@ -23,7 +23,7 @@
 
 .taskItemsContainer {
   flex: 0 1 auto;
-  overflow: scroll;
+  overflow-y: auto;
   padding: 0px;
   width: 100%;
   max-height: 460px;
